# CADEulerOperation

./: .gitignore  CMakeLists.txt  README.md  README.txt
src/: B-rep.cpp  B-rep.h  EulerOperation.cpp  EulerOperation.h  EulerTest.h  ModelPainter.cpp  ModelPainter.h  common.cpp  common.h  main.cpp
